--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,7 @@ addopts = -ra -s
     --report=results/report.html
     --screenshot only-on-failure
 
+markers =
+    smoke: marks tests as slow (deselect with '-m "not smoke"')
+
+
