--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest-playwright
         python -m pip install playwright
-        python -m pip install pytest-html
     - name: Ensure Playwright browsers are installed
       run: python -m playwright install
     - name: Lint with flake8
@@ -38,5 +37,7 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      env:
+        PASSWORD: ${{secrets.PASSWORD}}
       run: |
         pytest
