--- a/pytest.ini
+++ b/pytest.ini
@@ -3,9 +3,9 @@
 python_files = test_*
 addopts = -ra -s 
     --base-url=https://para.testar.org/parabank/index.htm/
-    #--browser chromium --browser firefox --browser webkit 
-    --template=html1/index.html 
-    --report=results/report.html
+    --browser chromium --browser firefox --browser webkit 
+    #--template=html1/index.html 
+    #--report=results/report.html
     --screenshot only-on-failure
 
 markers =
