--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,6 +28,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest-playwright
         python -m pip install playwright
+        pip install pytest-reporter-html1
     - name: Ensure Playwright browsers are installed
       run: python -m playwright install
     - name: Lint with flake8
