--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 playwright==1.35.0
 pytest==7.1.2
+pytest-base-url==2.0.0
+pytest-dotenv==0.5.2
+pytest-playwright==0.3.3
+pytest-reporter-html1==0.8.3
+pytest-xdist==3.3.1
