user_login fixeture to tests, removed regression tag

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,3 +10,4 @@ addopts = -ra -s
 
 markers =
     smoke: marks tests as slow (deselect with '-m "not smoke"')
+    regression: mark a test as a regression
